samples/_failures_safe/1761004332_15ace8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ac5909d.c: In function ‘main’:
./samples/SAFE/__tmp_5ac5909d.c:151:36: error: expected ‘;’ at end of input
  151 |                 print_current_state
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_5ac5909d.c:151:17: error: expected declaration or statement at end of input
  151 |                 print_current_state
      |                 ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ac5909d.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ac5909d.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ac5909d.c:151:17: error: expected declaration or statement at end of input
